# duckdb_httpfs

./: CMakeLists.txt  Makefile  README.md
.github/config/: test_extensions.cmake
.github/workflows/: MainDistributionPipeline.yml  _minio_testing.yml
scripts/: generate_presigned_url.sh
src/: httpfs_extension.cpp
test/nodejs/: httpfs_test.js
test/python/: httpfs_test.py
test/sql/: httpfs.test
test/sql/copy/s3/: hive_partitioned_write_s3.test_slow  parquet_s3_tpcds.test_slow  parquet_s3_tpch.test_slow  upload_small_file.test
test/sql/json/: read_json.test  read_json_auto.test_slow  read_json_objects.test
